Added tracking for visibility whether anyone is still using this

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BadWolfMC Voting App</title>
+	<script defer src="https://tracking.borders.website/script.js" data-website-id="561922a2-106b-4de6-8be6-d1054944e83a"></script>
   </head>
   <body>
     <div id="root"></div>
